update db for items

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "OresAndCores_2Context": "Server=(localdb)\\mssqllocaldb;Database=OresAndCores_2Context-cfe60caa-1e0b-41b5-966e-2a7ce33ec79a;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=OresAndCores-2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=OresAndCores-2;Trusted_Connection=True;MultipleActiveResultSets=true",
   }
 }
